style.scss
@font-face {
  font-family: 'rubikmedium';
  src: url('./assets/fonts/rubik-medium-webfont.woff2') format('woff2'),
    url('./assets/fonts/rubik-medium-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'rubiklight';
  src: url('./assets/fonts/rubik-light-webfont.woff2') format('woff2'),
    url('./assets/fonts/rubik-light-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'rubikbold';
  src: url('./assets/fonts/rubik-bold-webfont.woff2') format('woff2'),
    url('./assets/fonts/rubik-bold-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'rubikregular';
  src: url('./assets/fonts/rubik-regular-webfont.woff2') format('woff2'),
    url('./assets/fonts/rubik-regular-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

.center-xs {
  justify-content: center;
}

.text-center {
  text-align: center;
}

html,
body {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

.layout {
  position: relative;
  display: flex;
  min-height: 100vh;
  flex-direction: column;

  // overflow-x: hidden;
}

.middle-xs {
  align-items: center;
}

$black: #1e1e1e;
$white: #fff;
$blue: #4993dd;
$red: #e00a0a;
$grey: grey;

.mw-1200 {
  max-width: 1200px;
}

.between-xs {
  justify-content: space-between;
}

// colors
.blue {
  color: $blue;
}

.red {
  color: $red;
}

// fonts
a {
  color: $black;
  text-transform: uppercase;
  text-decoration: underline;
  font-family: 'rubikmedium', sans-serif;
  font-size: 16px;
  line-height: 20px;
}

body,
p {
  font-family: 'rubikregular', sans-serif;
  font-size: 14px;
  line-height: 20px;
}

input,
label {
  font-family: 'rubikregular', sans-serif;
}

p {
  margin-top: 0;
}

h1,
h2,
h3 {
  margin-top: 0;
  text-transform: uppercase;
  font-family: 'rubikbold', sans-serif;
  line-height: 1;
  letter-spacing: 0.015em;
}

h4,
h5,
h6 {
  margin-top: 0;
  text-transform: uppercase;
  font-family: 'rubiklight', sans-serif;
  line-height: 1;
  letter-spacing: 0.015em;
}

.h1 {
  font-size: 32px;
  line-height: 34px;
}

.rubiklight {
  font-family: 'rubiklight', sans-serif;
}

// tags
button,
.button {
  box-sizing: border-box;
  -webkit-appearance: button;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: none;
  text-transform: uppercase;
  font-family: 'rubikmedium', sans-serif;
  font-size: 18px;

  padding: 0.75em;
  border-radius: 0.3em;
  // min-width: 200px;
  display: inline-block;
  white-space: nowrap;

  &.w1 {
    width: 100%;
  }


  &.auto-size-xs {
    @media only screen and (max-width: 768px) {
      padding: 0.75em;
      width: auto;
    }
  }
}

section {
  display: block;
  // width: 100%;

  &.full {
    min-height: 100vh;
  }
}

.custom-container {
  max-width: 1200px;
}

.three-up {
  padding-top: 110px;
  padding-bottom: 110px;
}

// images
.image-fill img {
  max-width: 100%;
}

.fixed-background {
  background: url('./assets/hero.jpg') no-repeat center right;
  background-size: cover;
  // background-attachment: fixed;
}

.site-logo {
  width: 120px;
  height: auto;
  margin: 0;
}

// elements

.button-black {
  transition: all 200ms ease;
  background: $blue;
  color: $white;

  &:hover {
    background: $black;
    color: $white;
  }
}

// components

.topbar {
  position: absolute;
  top: 0;
  left: 0;
  width: auto;
  z-index: 1000;

  &.fixed-nav {
    position: fixed;

    @media only screen and (max-width: 48em) {
      position: static;
      text-align: center;

      .site-logo {
        width: auto;
        height: 70px;
        margin-top: 30px !important;
        margin-bottom: 30px !important;
      }
    }
  }
}

.hero {
  display: flex;
  flex-direction: column;
}

.square {
  width: 100%;
  max-width: 345px;
  margin: 0 auto;

  @media only screen and (max-width: 48em) {
    margin-bottom: 20px;
    flex-basis: auto;
  }
}

.etf-card {
  // background: rgba(255,255,255,0.8);

  &.black {
    // background: $black;
    background: url(./assets/card-bg.svg) no-repeat center center;
    color: $white;
    overflow: hidden;
  }

  .hero & {
    // margin: 0px 0 200px 0;
    margin: 0;
    padding: 45px 70px;
    align-self: center;
    justify-self: center;
    background: url(./assets/card-bg-wht.svg) no-repeat center right;
    background-size: cover;
    max-width: 700px;

    @media only screen and (max-width: 48em) {
      padding: 20px;
      margin-bottom: 200px;
      max-width: 100%;
      max-width: calc(100vw - 30px);
    }
  }

  .pre-title {
    font-size: 28px;
    margin: 0;
  }

  .title {
    font-size: 32px;
    margin: 0;
  }

  .big-title {
    font-size: 60px;
    margin: 0;

    @media screen and (min-width: 768px) and (max-width: 1200px) {
      font-size: 5vw;
    }
  }

  .square & {
    position: relative;
    height: 0;
    padding-bottom: 100%;

    .card-inner {
      position: absolute;
      height: 100%;
      width: 100%;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;

      p {
        min-height: 50px;
        padding: 0 20px;
      }
    }
  }
}

.product-card {
  .product-image {
    max-width: none;
    width: 100%;
    height: auto;
  }

  .product-brand {
    font-family: 'rubikregular', sans-serif;
    font-size: 14px;
    color: $grey;
    margin: 0;
  }

  .product-name {
    font-family: 'rubikmedium', sans-serif;
    font-size: 16px;
    margin: 0;
  }
}

.relative {
  position: relative;
}

.block-ui {
  position: absolute;
  z-index: 999;
  left: 15px;
  top: 0;
  height: 100%;
  width: 100%;
  background: rgba(255, 255, 255, 0.5);
}

footer {
  margin-top: 100px;

  a {
    font-size: 14px;
  }
}

.flex-center {
  justify-content: center;
}

.modal {
  .site-logo {
    width: 50px;
    height: auto;
  }

  .modal-content {
    padding: 50px;

    a.toggle-modal.close-modal {
      cursor: pointer;
      position: absolute;
      z-index: 999;

      top: 25px;
      right: 25px;

      // @media only screen and (min-width: 1024px) {
      //   top: initial;
      //   right: initial;
      //   bottom: 50px;
      //   left: 50px;
      // }
    }
  }
}

form {
  span {
    display: flex;
  }

  [type='submit'] {
    @extend .button;
    @extend .button-black;
  }

  select {
    display: block;
    font-weight: 700;
    color: #444;
    line-height: 1.3;
    padding: 1em 1.4em 0.9em 0.8em;
    max-width: 100%;
    box-sizing: border-box;
    margin: 0;
    border: 2px solid $grey;
    box-shadow: none;
    border-radius: 0.5em;
    appearance: none;
    background-color: $white;
    background-repeat: no-repeat;
    background-position: right 0.7em top 50%, 0 0;
    background-size: 0.65em auto, 100%;
    width: 100%;
    height: 3.715em;
  }

  .select-css::-ms-expand {
    display: none;
  }

  .select-css:hover {
    border-color: #888;
  }

  .select-css:focus {
    border-color: #aaa;
    box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
    box-shadow: 0 0 0 3px -moz-mac-focusring;
    color: #222;
    outline: none;
  }

  .select-css option {
    font-weight: normal;
  }

  input[type='text'],
  input[type='date'],
  input[type='number'],
  input[type='email'] {
    border: 2px solid $grey;
    border-radius: 5px;
    padding: 1em;
    width: 100%;
  }
}

.mouse-track-container {
  position: relative;

  .mouse-track {
    position: absolute;
    top: 0;
    left: 0;
    -webkit-text-fill-color: transparent;
    /* Will override color (regardless of order) */
    -webkit-text-stroke-width: 2px;

    &.red {
      -webkit-text-stroke-color: $red;
    }

    &.blue {
      -webkit-text-stroke-color: $blue;
    }
  }

  position: relative;
  z-index: 0;

  +p {
    position: relative;
    z-index: 2;
  }
}

.ticker {
  overflow: hidden;

  &-inner {
    position: relative;
    display: flex;
    flex-wrap: nowrap;
    white-space: nowrap;
  }

  .box {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 15px;
    flex: 1 0 auto;

    img {
      width: 100px;
      height: 100px;
      object-fit: contain;
    }
  }
}

.hidden-mobile {
  display: none;
}

.desktop .hidden-mobile {
  display: block !important;
}

